# how-to-optimize-gemm-cuda

./: CMakeLists.txt
src/: CMakeLists.txt  MMult_cuda_10.cu  MMult_cuda_11.cu  MMult_cuda_12.cu  MMult_cuda_2.cu  MMult_cuda_3.cu  MMult_cuda_4.cu  MMult_cuda_5.cu  MMult_cuda_6.cu  MMult_cuda_7.cu  MMult_cuda_8.cu  MMult_cuda_9.cu  REF_MMult.cpp  compare_matrices.cpp  copy_matrix.cpp  dclock.cpp  helper.h  parameters.h  print_matrix.cpp  random_matrix.cpp  test_MMult.cpp
